             fragment and a set of sequences

  o CHANGE:  Adjust the NBC model once more for 1-4 atoms involving Hydrogen atoms

  o CHANGE:  Adjust the initial RSR step size (no more wild water refinement)

  o CHANGE:  Post-refinement restraints analysis added

  o CHANGE:  Trans-peptide restraints added/removed as needed for cis-trans conversion
             of intermediate atoms

  o CHANGE:  Increase the initial step size for refinement

  o CHANGE:  API accept_moving_atoms() can now return the refinement results

  o CHANGE:  Remove libcheck as a restraints generator option

  o CHANGE:  Turn off EM-mode for PANDDA maps (Frank von Delft)

  o CHANGE:  "Residues with missing atoms" function no longer considers OP3. Additionally,
             missing atom names are written to the terminal (Lothar Essar)

  o CHANGE:  MMFF94 target geometry now used in minimization in pyrogen by default

  o BUG-FIX: Linking (shell) to the Coot executable now works (Marcin Wodjyr)

  o BUG-FIX: Clean up bit-rotten chemical feature clustering

  o BUG-FIX: rotamer-fit now runs the post-manipulation hook

  o BUG-FIX: No longer fail to load scheme scripts if the user-name is not in the passwd file

  o BUG-FIX: Better crash-catcher diagnostics (thanks Kevin Cowtan)

  o BUG-FIX: Chiral restraints improved in pyrogen (Rob Nicholls)

  o BUG-FIX: add-hydrogen-atoms no longer adds a hydrogen atom to an CYS SG if it is linked

----

  Release 0.9.5

  o FEATURE: Search monomer library has images

  o FEATURE: New comamnd-line program coot-ligand-validation

  o FEATURE: Add "Label Atoms in Residue" menu item

  o FEATURE: Add command line argument --run-state-script

  o FEATURE: Add function set_torsion_restraints_weight() to the API

  o FEATURE: Real space refinement now has dynamic weights (under More Control)

  o CHANGE:  Fall-back to monomer atoms for the chemical diagram when there are missing
             atoms in the model for hetgroups
