@@ -36,3 +36,5 @@ double graphics_info_t::torsion_restraints_weight = 1.0;
 bool graphics_info_t::use_harmonic_approximation_for_NBCs = false;
 
 std::vector<coot::colour_holder> graphics_info_t::user_defined_colours; // initially empty
+
+bool graphics_info_t::all_atom_contact_dots_ignore_water_flag = false;
